chore: lint code

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --primary-color: #089773;
   --primary-color-2: #f9bfb7;
   --spotlight-color: #e6f7f3;
@@ -13,43 +13,46 @@
 
 /* 设置滚动条样式 */
 ::-webkit-scrollbar {
-  width: 6px; /* 宽度 */
+  width: 6px;
+  /* 宽度 */
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent; /* 滚动条的背景颜色 */
+  background: transparent;
+  /* 滚动条的背景颜色 */
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #dcdcdc; /* 滚动条的滑块颜色 */
+  background: #dcdcdc;
+  /* 滚动条的滑块颜色 */
   border-radius: 3px;
 }
 
-.group-add-point>li{
+.group-add-point > li {
   position: relative;
   margin-left: 1rem;
 }
 
-.group-add-point> li:first-child::before{
+.group-add-point > li:first-child::before {
   bottom: -50%;
 }
 
-.group-add-point>li::before{
+.group-add-point > li::before {
   content: '';
   position: absolute;
   bottom: 0;
   left: -1rem;
   height: 100%;
-  background-color: var(--fallback-a,oklch(var(--a)/1));
+  background-color: var(--fallback-a, oklch(var(--a) / 1));
   height: 100%;
   width: 1px;
 }
 
-.group-add-point> li:last-child::before{
+.group-add-point > li:last-child::before {
   top: -50%;
 }
 
-.group-add-point>li::after{
+.group-add-point > li::after {
   content: '';
   position: absolute;
   bottom: 0;
