feat: post page init

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #089773;
   --primary-color-2: #f9bfb7;
+  --secondary-color: #666;
   --spotlight-color: #e6f7f3;
   --spotlight-color-2: #faeae7;
   --dark-bg-color: #333;
