--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,10 @@
 :root {
   --primary-color: #089773;
+  --primary-color: #089773;
   --primary-color-2: #f9bfb7;
-  --secondary-color: #666;
+  --secondary-color: #09090bcc;
   --spotlight-color: #e6f7f3;
+  --border-color: #c7e4dd;
   --spotlight-color-2: #faeae7;
   --dark-bg-color: #333;
   --dark-text-color: #fff;
@@ -29,16 +31,17 @@
   border-radius: 3px;
 }
 
-.group-add-point > li {
+::selection{
+  color: white;
+  background-color: var(--primary-color)
+}
+
+.timeline-container > .timeline-item {
   position: relative;
   margin-left: 1rem;
 }
 
-.group-add-point > li:first-child::before {
-  bottom: -50%;
-}
-
-.group-add-point > li::before {
+.timeline-container > .timeline-item::before {
   content: '';
   position: absolute;
   bottom: 0;
@@ -47,21 +50,22 @@
   background-color: var(--fallback-a, oklch(var(--a) / 1));
   height: 100%;
   width: 1px;
+  bottom: -50%;
 }
 
-.group-add-point > li:last-child::before {
-  top: -50%;
+.timeline-container > .timeline-item:last-child::before {
+  display: none;
 }
 
-.group-add-point > li::after {
+.timeline-container > .timeline-item::after {
   content: '';
   position: absolute;
   bottom: 0;
-  left: -1.12rem;
+  left: -1.16rem;
   top: 50%;
   transform: translateY(-50%);
-  width: 6px;
-  height: 6px;
+  width: 0.4rem;
+  height: 0.4rem;
   border-radius: 50%;
   background-color: var(--primary-color);
 }
