--- a/styles/global.css
+++ b/styles/global.css
@@ -45,6 +45,7 @@ body{
 .timeline-container > .timeline-item {
   position: relative;
   margin-left: 1rem;
+  padding: 0.25rem 0;
 }
 
 .timeline-container > .timeline-item::before {
@@ -73,5 +74,20 @@ body{
   width: 0.4rem;
   height: 0.4rem;
   border-radius: 50%;
+  background-color: var(--primary-color);
+}
+
+.pre-line{
+  padding-left: .5rem;
+  position: relative;
+}
+.pre-line::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 80%;
+  transform: translateY(-50%);
+  width: 2px;
   background-color: var(--primary-color);
 }
