--- a/styles/global.css
+++ b/styles/global.css
@@ -18,7 +18,7 @@
   background-color: rgba(0,0,0,0.8);
 }
 body{
-  background-color: #f8f8f8;
+  background-color: #fcfcfc;
 }
 /* 设置滚动条样式 */
 ::-webkit-scrollbar {
