--- a/components/markdown/styles/figure.css
+++ b/components/markdown/styles/figure.css
@@ -1,13 +1,13 @@
-.markdown-body .gallery{
+.markdown-body .gallery {
   position: relative;
-  border-radius: .8em;
+  border-radius: 0.8em;
   overflow: hidden;
 }
 
-.markdown-body .image-group{
+.markdown-body .image-group {
   position: relative;
   box-sizing: border-box;
-  border-radius: .8em;
+  border-radius: 0.8em;
   display: flex;
   max-width: 600px;
   margin: 0 auto;
@@ -16,45 +16,46 @@
   overflow-x: scroll;
 }
 
-.markdown-body .image-group-container .switch-container{
+.markdown-body .image-group-container .switch-container {
   position: absolute;
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.35s;
   background-color: rgba(255, 255, 255, 0.8);
   display: flex;
-  gap: .3em;
+  gap: 0.3em;
   bottom: 2em;
   left: 50%;
   padding: 1em 1.5em;
   border-radius: 2em;
   transform: translateX(-50%);
 }
-.markdown-body .image-group-container:hover .switch-container{
+.markdown-body .image-group-container:hover .switch-container {
   opacity: 1;
-  visibility:visible
+  visibility: visible;
 }
-.switch-container .switch-point{
-  height: .5em;
-  width: .5em;
+.switch-container .switch-point {
+  height: 0.5em;
+  width: 0.5em;
   border-radius: 50%;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
-.switch-container .active{
-  background-color: rgba(0,0,0,0.7);
+.switch-container .active {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 @media (max-width: 720px) {
-  .markdown-body .gallery img{
+  .markdown-body .gallery img {
   }
 }
 /* 图片容器 */
-.markdown-body .image-group figcaption{
+.markdown-body .image-group figcaption {
   display: none;
 }
 
-.markdown-body .image-group::-webkit-scrollbar-thumb, .markdown-body .image-group::-webkit-scrollbar-thum:hover {
+.markdown-body .image-group::-webkit-scrollbar-thumb,
+.markdown-body .image-group::-webkit-scrollbar-thum:hover {
   display: none;
   background-color: var(--yellow);
   border: 4px solid var(--border-color);
@@ -65,37 +66,37 @@
   position: relative;
   overflow-x: auto;
 }
-.markdown-body .image-group-container .image-group{
+.markdown-body .image-group-container .image-group {
   display: flex;
   gap: 16px;
   flex-wrap: nowrap;
 }
-.markdown-body .image-group-container .image-group .image-container{
+.markdown-body .image-group-container .image-group .image-container {
   flex-shrink: 0;
   margin: 0;
   width: calc(100% - 30px);
 }
-.markdown-body img{
+.markdown-body img {
   aspect-ratio: var(--aspect-ratio);
 }
-.image-group img{
+.image-group img {
   object-fit: cover;
 }
 
-.warning{
+.warning {
   display: flex;
   justify-content: center;
   align-items: center;
   color: rgb(31 41 55);
   min-height: 5rem;
   padding: 1rem;
-  border: 1px solid rgb(254,215,170);
+  border: 1px solid rgb(254, 215, 170);
   margin-bottom: 2.5rem;
   gap: 1rem;
   border-radius: 0.25rem;
-  background-color: rgb(255 247 237)
+  background-color: rgb(255 247 237);
 }
-.error{
+.error {
   display: flex;
   justify-content: center;
   align-items: center;
