--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -33,7 +33,8 @@
   line-height: 30px;
   letter-spacing: 2px;
   word-break: break-word;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   scroll-behavior: smooth;
   background-size: 50px 50px;
 }
